# cpp

oct29/: CMakeLists.txt  environment.yml
oct29/books/: arabic.txt
oct29/docs/: Doxyfile.in
oct29/docs/source/: conf.py  index.rst
oct29/homework/: Arabic.cpp  CMakeLists.txt  ZipF_Law.cpp  ZipF_Law_2.cpp
oct29/include/: Arabic.h  ZipF.h  ZipF_2.h
